holyc-parser/tests/corpus/failing/005-bug-compat-bug56-nested-typecast.hc
I64 b56_x=1; F64 b56_y = ((F64)b56_x);
